--- a/css/rectangle/rectangle.css
+++ b/css/rectangle/rectangle.css
@@ -1,21 +1,63 @@
 body {
-  margin: 0; }
+  margin: 0;
+  overflow: hidden; }
 
 .rect-box {
-  border: 5px solid black;
-  width: 300px;
-  height: 450px;
+  width: 345px;
+  height: 517.5px;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translateX(-50%) translateY(-50%); }
-.rect-hand {
+  transform: translateX(-50%) translateY(-50%);
+  background: white;
+  background-size: cover; }
+.rect-border {
+  opacity: 0;
+  transition: opacity 2s ease-in-out;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%); }
+  margin: 20px;
+  width: calc(100% - (20px * 2));
+  height: calc(100% - (20px * 2));
+  box-shadow: inset 0 0 0 7px black;
+  pointer-events: none; }
+.rect-menu {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  opacity: 0;
+  transition: opacity 2s ease-in-out; }
 
-.hand-path {
-  stroke-width: 5px; }
+.hand {
+  position: absolute;
+  opacity: 0;
+  transition: opacity 1.6s ease-in-out; }
+  .hand-despair {
+    top: 75%;
+    left: -60%; }
+  .hand-help {
+    top: -15%;
+    left: 72%; }
+  .hand-image-despair {
+    height: 195px;
+    width: auto; }
+  .hand-image-help {
+    height: 310px;
+    width: auto; }
+
+.menu-main-title {
+  color: black;
+  text-align: center;
+  margin: 0;
+  font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
+  cursor: pointer; }
+.menu-nav {
+  display: none;
+  opacity: 0; }
+  .menu-nav-option {
+    font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
+    cursor: pointer; }
 
 /*# sourceMappingURL=rectangle.css.map */
