--- a/css/rectangle/rectangle.scss
+++ b/css/rectangle/rectangle.scss
@@ -5,22 +5,93 @@
     transform: translateX(-50%) translateY(-50%);
 }
 
+@mixin shorttText() {
+    font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
+}
+
+@function marginAdjust($width, $margin) {
+    @return calc(#{$width} - (#{$margin} * 2));
+}
+
 body {
     margin: 0;
+    overflow: hidden;
 }
 
 .rect {
     &-box {
-        border: 5px solid black;
-        width: 300px;
-        height: 450px;
+        width: 345px; //300
+        height: 517.5px; //450
         @include absoluteCenter();
+        //background: url(./../../assets/jungle.jpg);
+        background: white;
+        background-size: cover;
     }
-    &-hand {
-        @include absoluteCenter();
+    &-border {
+        opacity: 0;
+        transition: opacity 2s ease-in-out;
+        position: absolute;
+        margin: 20px;
+        width: marginAdjust(100%, 20px);
+        height: marginAdjust(100%, 20px);
+        box-shadow: inset 0 0 0 7px black;
+        pointer-events: none;
+    }
+    &-menu {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        opacity: 0;
+        transition: opacity 2s ease-in-out;
     }
 }
 
-.hand-path {
-    stroke-width: 5px;
+.hand {
+    position: absolute;
+    opacity: 0;
+    transition: opacity 1.6s ease-in-out;
+    &-despair {
+        top: 75%;
+        left: -60%;
+    }
+    &-help {
+        top: -15%;
+        left: 72%;
+    }
+    &-image {
+        &-despair {
+            height: 195px;
+            width: auto;
+        }
+        &-help {
+            height: 310px;
+            width: auto;
+        }
+    }
+}
+
+.menu {
+    &-main {
+        &-title {
+            color: black;
+            text-align: center;
+            margin: 0;
+            @include shorttText();
+            cursor: pointer;
+        }
+    }
+    &-nav {
+        display: none;
+        opacity: 0;
+        &-option {
+            @include shorttText();
+            cursor: pointer;
+        }
+    }
+    &-contact {
+        
+    }
 }
